# neurocore-mainframe

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: main.rs
backend/src/services/: adapters.rs  archive.rs  commands.rs  logs.rs  mod.rs  processes.rs  session.rs  telemetry.rs
docs/: ANIMATIONS.md  ARCHITECTURE.md  ROADMAP.md  UI-SYSTEM.md
frontend/: index.html  package.json  vite.config.js
frontend/public/: manifest.webmanifest  sw.js
frontend/public/config/: languages.json  modules.json  themes.json
frontend/src/: main.js
frontend/src/components/: liveLog.js
frontend/src/effects/: cursorField.js  matrixRain.js  scope.js  webglDepth.js
frontend/src/modules/: archive.js  core.js  detection.js  index.js  memory.js  messages.js  network.js  process.js  prototype.js  settings.js  signal.js  systemLog.js
frontend/src/services/: api.js  i18n.js
frontend/src/styles/: base.css  layout.css  modules.css
scripts/: api-tests.mjs  dev.mjs  screenshots.mjs  visual-regression.mjs
