[package]
name = "neurocore-backend"
version = "1.1.0"
edition = "2024"
description = "Rust-powered backend API for NeuroCore // MAINFRAME."
license = "Apache-2.0"

[dependencies]
axum = "0.8"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6", features = ["fs", "limit", "set-header", "trace"] }
